# sanuba

./: .gitignore  CLAUDE.md  CONVENTIONS.md  Cargo.toml  DESIGN.md  MULTIPLAYER_MIGRATION.md  PLAN.md  POWDER_PLAN.md  PROFILING_SUMMARY.md  PROMPT.md  README.md  UI_DESIGN_ANALYSIS.md  UI_SCREENSHOT_CHECKLIST.md  WORLDGEN_PLAN.md  bacon.toml  build-web.bat  build-web.sh  justfile  zensical.toml
.cargo/: config.toml
.claude/agents/: code-reviewer.md
.github/workflows/: ci.yml  pages.yml  release.yml
crates/sunaba/: Cargo.toml
crates/sunaba-core/: Cargo.toml
crates/sunaba-creature/: Cargo.toml
crates/sunaba-server/: Cargo.toml
crates/sunaba-server/src/: encoding.rs  helpers.rs  lib.rs  state.rs  tables.rs  world_access.rs
crates/sunaba-server/src/reducers/: creatures.rs  lifecycle.rs  mod.rs  monitoring.rs  player_actions.rs  testing.rs  world_ticks.rs
crates/sunaba-simulation/: build.rs
deployment/: DEPLOYMENT.md  spacetimedb.service
docs/: architecture.md  cppn-neat.md  emergent-physics.md  index.md  map-elites.md  neural-control.md  prior-work.md
experiments/: PROGRESS.md
scenario_results/: Mining_Test_result.json
scenarios/: DETAILED_PROFILING.md  PROFILING_QUICKREF.md  composition_example.ron  smoke_test.ron  test_fillrect.ron  test_mining.ron
scenarios/powder/: ant_walk_test.ron  bird_flock_test.ron  clone_copy_test.ron  electricity_spark_test.ron  electricity_thunder_test.ron  fish_swim_test.ron  fuse_burn_test.ron  spark_test_simple.ron  vine_growth_test.ron  virus_spread_test.ron
scenarios/tier1_ml/: test_archetype_viability.ron  test_collision_integrity.ron  test_food_seeking.ron  test_morphology_archetypes.ron  test_motor_movement.ron  test_neural_control.ron
scenarios/tier2_player/: test_crafting_recipe.ron  test_eating_restoration.ron  test_inventory_stacking.ron  (+5 more)
site/: 404.html  index.html  search.json
src/: app.rs  lib.rs  main.rs
src/ui/: hud.rs  (+8 more)
web/: index.html
(+196 files in other folders)
